[package]
name = 'system_shutdown'
version = '1.0.2'
authors = ['Silvio Clecio (silvioprog) <silvioprog@gmail.com>']
license = 'MIT/Apache-2.0'
description = 'Rust library for shut down/reboot the system.'
homepage = 'https://github.com/risoflora/system_shutdown'
repository = 'https://github.com/risoflora/system_shutdown'
readme = 'README.md'
keywords = [
    'system',
    'shutdown',
    'reboot',
]
categories = [
    'api-bindings',
    'hardware-support',
    'os::macos-apis',
    'os::unix-apis',
    'os::windows-apis',
]

[dependencies]
[target."cfg(windows)".dependencies.winapi]
version = '0.3'
features = [
    'errhandlingapi',
    'processthreadsapi',
    'reason',
    'securitybaseapi',
    'winbase',
    'winerror',
    'winnt',
    'winuser',
]
