[package]
name = 'system_shutdown'
version = '4.1.0'
authors = ['Silvio Clecio (silvioprog) <silvioprog@gmail.com>']
license = 'MIT/Apache-2.0'
description = 'Rust library for shut down, reboot or log out operations.'
homepage = 'https://github.com/risoflora/system_shutdown'
repository = 'https://github.com/risoflora/system_shutdown'
readme = 'README.md'
keywords = ['system', 'shutdown', 'reboot']
categories = [
    'api-bindings',
    'hardware-support',
    'os::macos-apis',
    'os::unix-apis',
    'os::windows-apis',
]
edition = '2024'

[target.'cfg(target_os = "linux")'.dependencies]
"zbus" = "5.13.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = '0.62'
features = [
    'Win32_Foundation',
    'Win32_Security',
    'Win32_System_Com',
    'Win32_System_Threading',
    'Win32_System_Shutdown',
    'Win32_System_Power',
    'Win32_System_SystemServices',
]
